--- a/CAPSTONE_TEAM01_2024/Views/Categories/SemesterPlan.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Categories/SemesterPlan.cshtml
@@ -1,7 +1,6 @@
-﻿@model CAPSTONE_TEAM01_2024.Utilities.PaginatedList<CAPSTONE_TEAM01_2024.Models.SemesterPlan>
+﻿@model CAPSTONE_TEAM01_2024.ViewModels.SemesterPlanViewModel
 @{
 ViewData["Title"] = "Semester Plan";
-    int counter = (Model.PageIndex - 1) * Model.PageSize;
 }
 
 <div class="content-wrapper" style="min-height: 912.2px;">
@@ -26,7 +25,7 @@ ViewData["Title"] = "Semester Plan";
                 <div class="card-header">
                     <div class="row text-center">
                         <div class="col-auto">
-                            <button type="button" class="btn btn-success" onclick="AddPlans()">
+                            <button type="button" class="btn btn-success" onclick="openAddPlanModal()">
                                 <i class="bi bi-plus"></i> Thêm Kế Hoạch
                             </button>
                             <button type="button" class="btn btn-secondary" onclick="exportPlans()">
@@ -77,50 +76,11 @@ ViewData["Title"] = "Semester Plan";
                                 <th>Mã Lớp</th>
                                 <th>Tên Cố Vấn</th>
                                 <th>Ngày Tạo</th>
-                                <th>Minh Chứng</th>
                                 <th>Trạng Thái</th>
                                 <th>Thao Tác</th>
                             </tr>
                         </thead>
                         <tbody id="data-table">
-                            @foreach (var plan in Model)
-                            {
-                                counter++;
-                                <tr>
-                                    <td class="text-center">@counter</td>
-                                    <td class="text-center">@plan.PeriodName</td>
-                                    <td class="text-center">@plan.PlanType</td>
-                                    <td class="text-center">@plan.ClassId</td>
-                                    <td class="text-center">
-                                        @{
-                                            var advisorName = !string.IsNullOrEmpty(plan.Class.Advisor.FullName) ? plan.Class.Advisor.FullName : plan.Class.Advisor.Email;
-                                        }
-                                        @advisorName
-                                    </td>
-                                    <td class="text-center">@plan.CreationTime.ToString("dd/MM/yyyy")</td>
-                                    <td class="text-center align-middle">
-                                        @if (plan.ProofFile != null && plan.ProofFile.Length > 0)
-                                        {
-                                            <div class="position-relative badge bg-light text-dark p-2" style="cursor: pointer;" onclick="showImage('@Url.Action("GetImage", "Categories", new { id = plan.PlanId })')">
-                                                <i class="bi bi-file-earmark-image"></i> @plan.ProofFileName
-                                            </div>
-                                        }
-                                        else
-                                        {
-                                            <p>Chưa có Minh Chứng.</p>
-                                        }
-                                    </td>
-                                    <td class="text-center">@plan.Status</td>
-                                    <td class="text-center">
-                                        <a href="/Categories/SemesterPlanDetail" class="btn btn-outline-success btn-sm" title="Xem chi tiết"><i class="bi bi-eye"></i></a>
-                                        <button class="btn btn-outline-primary btn-sm btn-edit" title="Cập Nhật" data-id="@plan.PlanId">
-                                            <i class="bi bi-pencil"></i>
-                                        </button>
-                                        <button class="btn btn-outline-danger btn-sm delete" title="Xóa"><i class="bi bi-trash"></i></button>
-                                        <button class="btn btn-outline-secondary btn-sm" title="Nộp "><i class="bi bi-file-earmark-arrow-up"></i></button>
-                                    </td>
-                                </tr>
-                            }
                             <tr id="noresults" style="display: none;">
                                 <td colspan="9" class="text-center">Không tìm thấy nội dung</td>
                             </tr>
@@ -129,49 +89,6 @@ ViewData["Title"] = "Semester Plan";
                     <!-- Pagination Controls -->
                     <nav aria-label="Page navigation">
                         <ul class="pagination justify-content-end">
-                            @if (Model.HasPreviousPage)
-                            {
-                                <li class="page-item">
-                                    <a class="page-link" asp-action="MyAnnouncements" asp-route-pageIndex="@(Model.PageIndex - 1)" aria-label="Previous">
-                                        <span aria-hidden="true">«</span>
-                                    </a>
-                                </li>
-                            }
-                            else
-                            {
-                                <li class="page-item disabled">
-                                    <a class="page-link" aria-label="Previous">
-                                        <span aria-hidden="true">«</span>
-                                    </a>
-                                </li>
-                            }
-                            @for (var i = 1; i <= Model.TotalPages; i++)
-                            {
-                                if (i == Model.PageIndex)
-                                {
-                                    <li class="page-item active"><a class="page-link">@i</a></li>
-                                }
-                                else
-                                {
-                                    <li class="page-item"><a class="page-link" asp-action="MyAnnouncements" asp-route-pageIndex="@i">@i</a></li>
-                                }
-                            }
-                            @if (Model.HasNextPage)
-                            {
-                                <li class="page-item">
-                                    <a class="page-link" asp-action="MyAnnouncements" asp-route-pageIndex="@(Model.PageIndex + 1)" aria-label="Next">
-                                        <span aria-hidden="true">»</span>
-                                    </a>
-                                </li>
-                            }
-                            else
-                            {
-                                <li class="page-item disabled">
-                                    <a class="page-link" aria-label="Next">
-                                        <span aria-hidden="true">»</span>
-                                    </a>
-                                </li>
-                            }
                         </ul>
                     </nav>
                 </div>
@@ -181,6 +98,87 @@ ViewData["Title"] = "Semester Plan";
     </main>
 </div>
 
+<!--Add Modal--> 
+<div class="modal fade" id="AddSemesterPlanModal" tabindex="-1" aria-labelledby="AddSemesterPlanModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl">
+        <div class="modal-content">
+            <div class="modal-header" style="display: flex; justify-content: space-between; width: 100%; align-items: center;">
+                <h5 class="modal-title" id="AddSemesterPlanModalLabel">Thêm Kế Hoạch Học Kỳ</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body" style="overflow-y: auto; max-height: 80vh;">
+                <!-- Row for Kế Hoạch CVHT and Dropdown -->
+                <div class="fields-row" style="display: flex; align-items: center; gap: 10px; width: 100%; font-weight: bold; padding-bottom: 5px;">
+                    <div style="flex: 1; text-align: center;">KeHoachCVHT</div>
+                    <div style="flex: 1; text-align: center;">
+                        <select id="schoolyear" name="SelectedSchoolYear" style="width: 100%;">
+                            @foreach (var item in Model.SchoolYears)
+                            {
+                                <option value="@item.Value">@item.Text</option>
+                            }
+                        </select>
+                    </div>
+                </div>
+                <!-- Header Row for Fields -->
+                <div class="fields-row" style="display: flex; align-items: center; gap: 10px; width: 100%; font-weight: bold; border-bottom: 2px solid #ccc; padding-bottom: 5px;">
+                    <div style="flex: 1; text-align: center;">Tiêu Chí</div>
+                    <div style="flex: 2; text-align: center;">Mô Tả Công Việc</div>
+                    <div style="flex: 1; text-align: center;">Cách Thực Hiện</div>
+                    <div style="flex: 1; text-align: center;">Định Lượng</div>
+                    <div style="flex: 1; text-align: center;">Thời Gian</div>
+                    <div style="flex: 1; text-align: center;">Ghi Chú</div>
+                </div>
+                
+                <!-- Rows for Tiêu Chí 1 -->
+                <div style="display: flex; width: 100%;">
+                    <textarea name="tieuChi1" style="flex: 1; min-width: 200px; height: 200px; font-weight: bold;">Một số nội dung cơ bản của nhiệm vụ CVHT</textarea>
+                    <div style="flex: 2; display: flex; flex-direction: column; gap: 10px;">
+                        <textarea name="moTaCongViec1-1" style="flex: 1; min-width: 100px; height: 50px; font-weight: bold;">Kế hoạch CVHT</textarea>
+                        <textarea name="moTaCongViec1-2" style="flex: 1; min-width: 100px; height: 50px; font-weight: bold;">Họp lớp tập trung</textarea>
+                        <textarea name="moTaCongViec1-3" style="flex: 1; min-width: 100px; height: 50px; font-weight: bold;">Lịch CVHT tư vấn cá nhân cho sinh viên</textarea>
+                    </div>
+                    <div style="flex: 1; display: flex; flex-direction: column; gap: 10px;">
+                        <textarea name="cachThucHien1-1" style="flex: 1; min-width: 100px; height: 50px;"></textarea>
+                        <textarea name="cachThucHien1-2" style="flex: 1; min-width: 100px; height: 50px;"></textarea>
+                        <textarea name="cachThucHien1-3" style="flex: 1; min-width: 100px; height: 50px;"></textarea>
+                    </div>
+                    <div style="flex: 1; display: flex; flex-direction: column; gap: 10px;">
+                        <textarea name="dinhLuong1-1" style="flex: 1; min-width: 100px; height: 50px;"></textarea>
+                        <textarea name="dinhLuong1-2" style="flex: 1; min-width: 100px; height: 50px;"></textarea>
+                        <textarea name="dinhLuong1-3" style="flex: 1; min-width: 100px; height: 50px;"></textarea>
+                    </div>
+                    <div style="flex: 1; display: flex; flex-direction: column; gap: 10px;">
+                        <textarea name="thoiGian1-1" style="flex: 1; min-width: 100px; height: 50px;"></textarea>
+                        <textarea name="thoiGian1-2" style="flex: 1; min-width: 100px; height: 50px;"></textarea>
+                        <textarea name="thoiGian1-3" style="flex: 1; min-width: 100px; height: 50px;"></textarea>
+                    </div>
+                    <div style="flex: 1; display: flex; flex-direction: column; gap: 10px;">
+                        <textarea name="ghiChu1-1" style="flex: 1; min-width: 100px; height: 50px;">Có lập kế hoạch CVHT theo TB</textarea>
+                        <textarea name="ghiChu1-2" style="flex: 1; min-width: 100px; height: 50px;">Tổ chức 100% các buổi họp tập trung online</textarea>
+                        <textarea name="ghiChu1-3" style="flex: 1; min-width: 100px; height: 50px;">Có TB lịch cho SV và trực theo lịch đã công bố</textarea>
+                    </div>
+                </div>
+
+
+                <!-- Modal Footer -->
+                <div class="modal-footer" style="display: flex; justify-content: space-between; width: 100%; align-items: center;">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Hủy</button>
+                    <button type="button" class="btn btn-primary save">Save</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
 <script>
+//Add Modal JS
+    function openAddPlanModal() { 
+        var modal = new bootstrap.Modal(document.getElementById('AddSemesterPlanModal')); 
+        modal.show(); 
+    }
+
+ 
 
 </script>
