--- a/CAPSTONE_TEAM01_2024/Views/Shared/_PersonnelLayout.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Shared/_PersonnelLayout.cshtml
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin-bottom: 0px; height: 100%;">
         <div class="container-fluid">
             <a class="navbar-brand" href="#" style="text-transform: uppercase; color: #fff; font-weight: 600; font-size: 25px;">
-                <img src="https://insacmau.com/wp-content/uploads/2023/02/logo-van-lang.png" alt="Logo Đại học Văn Lang">
+                <img src="~/Resources/Img/logoVL_white.png" style ="width: 50px; height:50px;"alt="Logo Đại học Văn Lang">
                 Quản Lý Hoạt Động Cố Vấn Học Tập
             </a>
             <div class="d-flex">
