--- a/CAPSTONE_TEAM01_2024/Views/Shared/_StudentLayout.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Shared/_StudentLayout.cshtml
@@ -25,7 +25,7 @@
                             height: 8%;margin-bottom: 0px; ">
         <div class="container-fluid">
             <a class="navbar-brand" href="#" style="text-transform: uppercase; color: #fff; font-weight: 600; font-size: 25px;">
-                <img src="https://insacmau.com/wp-content/uploads/2023/02/logo-van-lang.png" alt="Logo Đại học Văn Lang">
+                <img src="~/Resources/Img/logoVL_white.png" style="width: 50px; height:50px;" alt="Logo Đại học Văn Lang">
                 Quản Lý Hoạt Động Cố Vấn Học Tập
             </a>
             <div class="d-flex">
